이미지 로컬 저장

--- a/customer_service.html
+++ b/customer_service.html
@@ -359,7 +359,7 @@
       <div class="bg-white rounded-xl p-4 shadow-sm">
         <div class="flex items-center gap-3 mb-4">
           <img
-            src="https://videos.openai.com/vg-assets/assets%2Ftask_01k186she6fqg93tsd8b2g9y8h%2F1753696046_img_0.webp?st=2025-07-28T08%3A02%3A09Z&se=2025-08-03T09%3A02%3A09Z&sks=b&skt=2025-07-28T08%3A02%3A09Z&ske=2025-08-03T09%3A02%3A09Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=3d249c53-07fa-4ba4-9b65-0bf8eb4ea46a&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=%2FeqVi%2BTCwc9Rl28sBrZ5NU9i5gd6yOigY0FOvUr0VLI%3D&az=oaivgprodscus"
+            src="./assets/i.webp"
             class="w-12 h-12 rounded-xl" alt="앱 아이콘">
           <div>
             <h4 class="font-medium">ThankQ Camping</h4>
