--- a/event.html
+++ b/event.html
@@ -197,9 +197,7 @@
         <!-- 이벤트 카드 1 -->
         <div class="event-card bg-white rounded-xl overflow-hidden shadow-sm cursor-pointer">
           <div class="relative">
-            <img
-              src="https://videos.openai.com/vg-assets/assets%2Ftask_01k184dhp4fdd9q2yg3t0nq4vh%2F1753693577_img_1.webp?st=2025-07-28T08%3A01%3A32Z&se=2025-08-03T09%3A01%3A32Z&sks=b&skt=2025-07-28T08%3A01%3A32Z&ske=2025-08-03T09%3A01%3A32Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=3d249c53-07fa-4ba4-9b65-0bf8eb4ea46a&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=Corl3A1XP7QpeUIt7IVEGJKSAnLrxHLXQe0EK3Dq2so%3D&az=oaivgprodscus"
-              class="w-full h-48 object-cover" alt="캠핑용품 할인 이벤트">
+            <img src="./assets/discount.png" class="w-full h-48 object-cover" alt="캠핑용품 할인 이벤트">
             <div class="absolute top-3 left-3 bg-red-500 text-white px-2 py-1 rounded text-xs font-medium">
               HOT
             </div>
@@ -230,9 +228,7 @@
         <!-- 이벤트 카드 2 -->
         <div class="event-card bg-white rounded-xl overflow-hidden shadow-sm cursor-pointer">
           <div class="relative">
-            <img
-              src="https://videos.openai.com/vg-assets/assets%2Ftask_01k185a27jfytsdg09062p2jft%2F1753694490_img_1.webp?st=2025-07-28T08%3A00%3A46Z&se=2025-08-03T09%3A00%3A46Z&sks=b&skt=2025-07-28T08%3A00%3A46Z&ske=2025-08-03T09%3A00%3A46Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=3d249c53-07fa-4ba4-9b65-0bf8eb4ea46a&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=NOS2NATCgMHa0ufVk1NY1UUrgOfJNFh6wM3lTeAEEvg%3D&az=oaivgprodscus"
-              class="w-full h-48 object-cover" alt="글램핑 체험 이벤트">
+            <img src="./assets/free_trial.png" class="w-full h-48 object-cover" alt="글램핑 체험 이벤트">
             <div class="absolute top-3 left-3 bg-green-500 text-white px-2 py-1 rounded text-xs font-medium">
               체험
             </div>
@@ -263,9 +259,7 @@
         <!-- 이벤트 카드 3 -->
         <div class="event-card bg-white rounded-xl overflow-hidden shadow-sm cursor-pointer">
           <div class="relative">
-            <img
-              src="https://videos.openai.com/vg-assets/assets%2Ftask_01k185e6j7fsn8amek8eag9002%2F1753694581_img_1.webp?st=2025-07-28T08%3A00%3A17Z&se=2025-08-03T09%3A00%3A17Z&sks=b&skt=2025-07-28T08%3A00%3A17Z&ske=2025-08-03T09%3A00%3A17Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=3d249c53-07fa-4ba4-9b65-0bf8eb4ea46a&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=lBxdYiS%2BdHnDG74ddVhz%2FTa1eAqd%2BT%2Fj9w1BNml0k7U%3D&az=oaivgprodscus"
-              class="w-full h-48 object-cover" alt="신규회원 쿠폰">
+            <img src="./assets/new_member.png" class="w-full h-48 object-cover" alt="신규회원 쿠폰">
             <div class="absolute top-3 left-3 bg-blue-500 text-white px-2 py-1 rounded text-xs font-medium">
               신규
             </div>
@@ -296,9 +290,7 @@
         <!-- 이벤트 카드 4 -->
         <div class="event-card bg-white rounded-xl overflow-hidden shadow-sm cursor-pointer">
           <div class="relative">
-            <img
-              src="https://videos.openai.com/vg-assets/assets%2Ftask_01k185qwxyfsxbdck016vj3qha%2F1753694983_img_0.webp?st=2025-07-28T07%3A58%3A27Z&se=2025-08-03T08%3A58%3A27Z&sks=b&skt=2025-07-28T07%3A58%3A27Z&ske=2025-08-03T08%3A58%3A27Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=3d249c53-07fa-4ba4-9b65-0bf8eb4ea46a&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=W4JtwS%2BLll4QtR3hW9zomQkR2QJ5A%2FH%2F3y9DxIyaqII%3D&az=oaivgprodscus"
-              class="w-full h-48 object-cover" alt="럭키드로우 이벤트">
+            <img src="./assets/lucky_draw.png" class="w-full h-48 object-cover" alt="럭키드로우 이벤트">
             <div class="absolute top-3 left-3 bg-yellow-500 text-white px-2 py-1 rounded text-xs font-medium">
               럭키드로우
             </div>
@@ -337,9 +329,7 @@
 
       <div class="bg-white rounded-xl p-4 shadow-sm">
         <div class="flex items-center gap-3 mb-3">
-          <img
-            src="https://videos.openai.com/vg-assets/assets%2Ftask_01k1864at9fmgrkf0273fcxg1a%2F1753695352_img_0.webp?st=2025-07-28T08%3A00%3A53Z&se=2025-08-03T09%3A00%3A53Z&sks=b&skt=2025-07-28T08%3A00%3A53Z&ske=2025-08-03T09%3A00%3A53Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=3d249c53-07fa-4ba4-9b65-0bf8eb4ea46a&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=vjp%2BIHBPr7eRbztblK9po%2FNZIG7e%2BbI0%2BoNMZ8thIco%3D&az=oaivgprodscus"
-            class="w-12 h-12 rounded-lg object-cover" alt="마감임박">
+          <img src="./assets/deadline.png" class="w-12 h-12 rounded-lg object-cover" alt="마감임박">
           <div class="flex-1">
             <h4 class="font-medium mb-1">여름 마지막 특가</h4>
             <p class="text-sm text-gray-600">글램핑 30% 할인</p>
@@ -414,9 +404,7 @@
       <div class="space-y-3">
         <div class="bg-gray-100 rounded-xl p-4 opacity-60">
           <div class="flex items-center gap-3">
-            <img
-              src="https://videos.openai.com/vg-assets/assets%2Ftask_01k1865b36f15sx76wd5ef0s0y%2F1753695378_img_0.webp?st=2025-07-28T07%3A58%3A33Z&se=2025-08-03T08%3A58%3A33Z&sks=b&skt=2025-07-28T07%3A58%3A33Z&ske=2025-08-03T08%3A58%3A33Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=3d249c53-07fa-4ba4-9b65-0bf8eb4ea46a&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=%2BkWS%2BGcIffRBbTpOOVygkOOoy1%2B2ngdvLT%2BQd230ki8%3D&az=oaivgprodscus"
-              class="w-12 h-12 rounded-lg object-cover grayscale mt-3" alt="종료된 이벤트">
+            <img src="./assets/end.png" class="w-12 h-12 rounded-lg object-cover grayscale mt-3" alt="종료된 이벤트">
             <div class="flex-1">
               <h4 class="font-medium mb-1 text-gray-600">봄맞이 캠핑 축제</h4>
               <p class="text-sm text-gray-500">2024.05.01 ~ 2024.05.31</p>
@@ -426,9 +414,7 @@
         </div>
         <div class="bg-gray-100 rounded-xl p-4 opacity-60">
           <div class="flex items-center gap-3">
-            <img
-              src="https://videos.openai.com/vg-assets/assets%2Ftask_01k1865b36f15sx76wd5ef0s0y%2F1753695378_img_0.webp?st=2025-07-28T07%3A58%3A33Z&se=2025-08-03T08%3A58%3A33Z&sks=b&skt=2025-07-28T07%3A58%3A33Z&ske=2025-08-03T08%3A58%3A33Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=3d249c53-07fa-4ba4-9b65-0bf8eb4ea46a&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=%2BkWS%2BGcIffRBbTpOOVygkOOoy1%2B2ngdvLT%2BQd230ki8%3D&az=oaivgprodscus"
-              class="w-12 h-12 rounded-lg object-cover grayscale mt-3" alt="종료된 이벤트">
+            <img src="./assets/end.png" class="w-12 h-12 rounded-lg object-cover grayscale mt-3" alt="종료된 이벤트">
             <div class="flex-1">
               <h4 class="font-medium mb-1 text-gray-600">어린이날 가족캠핑</h4>
               <p class="text-sm text-gray-500">2024.05.01 ~ 2024.05.15</p>
