--- a/index.html
+++ b/index.html
@@ -165,9 +165,7 @@
       <div class="relative h-64 rounded-xl overflow-hidden bg-black">
         <video class="w-full h-full object-cover" muted loop playsinline preload="metadata"
           poster="https://readdy.ai/api/search-image?query=Beautiful%20camping%20site%20in%20nature%20with%20tent%20and%20campfire%20at%20sunset%2C%20cinematic%20shot%2C%204k%20quality&width=800&height=600&seq=10&orientation=landscape">
-          <source
-            src="https://videos.openai.com/vg-assets/assets%2Ftask_01k17apgxae7wvgysn9ykhdztn%2Ftask_01k17apgxae7wvgysn9ykhdztn_genid_943fd74a-1bd6-472e-86e4-aaf7ac235de6_25_07_28_01_35_240460%2Fvideos%2F00000_21562451%2Fsource.mp4?st=2025-07-28T07%3A02%3A55Z&se=2025-08-03T08%3A02%3A55Z&sks=b&skt=2025-07-28T07%3A02%3A55Z&ske=2025-08-03T08%3A02%3A55Z&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skoid=3d249c53-07fa-4ba4-9b65-0bf8eb4ea46a&skv=2019-02-02&sv=2018-11-09&sr=b&sp=r&spr=https%2Chttp&sig=NNMKW%2B%2BWQKfKiEgLnXsJmV0kQzBataZLmYNBC0Y65vs%3D&az=oaivgprodscus"
-            type="video/mp4">
+          <source src="./assets/index_video.mp4" type="video/mp4">
         </video>
         <div class="absolute inset-0 bg-gradient-to-t from-black/60 via-transparent to-transparent"></div>
         <div class="absolute bottom-0 left-0 right-0 p-6">
