--- a/404.html
+++ b/404.html
@@ -2,23 +2,63 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#ffffff" />
     <title>ThankQ Camping</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.tailwindcss.com/3.4.16"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              primary: '#FF7A45',
+              secondary: '#4A90E2',
+            },
+            borderRadius: {
+              none: '0px',
+              sm: '4px',
+              DEFAULT: '8px',
+              md: '12px',
+              lg: '16px',
+              xl: '20px',
+              '2xl': '24px',
+              '3xl': '32px',
+              full: '9999px',
+              button: '8px',
+            },
+          },
+        },
+      };
+    </script>
+    <style>
+      :where([class^='ri-'])::before {
+        content: '\f3c2';
+      }
+    </style>
     <script>
       // GitHub Pages에서 SPA 라우팅을 위한 리다이렉트
       // basename "/camping"을 고려한 리다이렉트
-      var pathSegmentsToKeep = 1; // "/camping" 경로 유지
       var l = window.location;
       var basename = '/camping';
       
       // 현재 경로가 basename으로 시작하지 않으면 basename을 추가
       if (!l.pathname.startsWith(basename)) {
-        var newPath = basename + l.pathname;
-        if (l.pathname !== '/') {
-          newPath = basename + l.pathname;
-        } else {
-          newPath = basename + '/';
-        }
+        var newPath = basename + (l.pathname === '/' ? '/' : l.pathname);
         l.replace(
           l.protocol +
           '//' +
@@ -29,7 +69,7 @@
           (l.hash ? l.hash : '')
         );
       } else {
-        // basename이 이미 있으면 index.html로 리다이렉트
+        // basename이 이미 있으면 index.html로 리다이렉트 (SPA 라우팅)
         var path = l.pathname.slice(basename.length) || '/';
         l.replace(
           l.protocol +
